--- a/realworldhaskell-util.cabal
+++ b/realworldhaskell-util.cabal
@@ -28,6 +28,20 @@ executable convert
                      , text
   default-language:    Haskell2010
 
+executable crawl
+  hs-source-dirs:      app
+  main-is:             Crawl.hs
+  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
+  build-depends:       base
+                     , bytestring
+                     , directory
+                     , http-client
+                     , lens
+                     , regex-compat
+                     , utf8-string
+                     , wreq
+  default-language:    Haskell2010
+
 test-suite realworldhaskell-util-test
   type:                exitcode-stdio-1.0
   hs-source-dirs:      test
